--- a/Project/Untitled.ipynb
+++ b/Project/Untitled.ipynb
@@ -284,24 +284,284 @@
    "execution_count": 3,
    "id": "0953328c-2f63-4200-b23b-e849e4bf16a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YearsExperience</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>4.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>5.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>6.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>7.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>7.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>8.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>9.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>9.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>10.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>10.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>11.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>11.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>12.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>12.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>13.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    YearsExperience\n",
+       "0               1.1\n",
+       "1               1.3\n",
+       "2               1.5\n",
+       "3               2.0\n",
+       "4               2.2\n",
+       "5               2.9\n",
+       "6               3.0\n",
+       "7               3.2\n",
+       "8               3.2\n",
+       "9               3.7\n",
+       "10              3.9\n",
+       "11              4.0\n",
+       "12              4.0\n",
+       "13              4.1\n",
+       "14              4.5\n",
+       "15              4.9\n",
+       "16              5.1\n",
+       "17              5.3\n",
+       "18              5.9\n",
+       "19              6.0\n",
+       "20              6.8\n",
+       "21              7.1\n",
+       "22              7.9\n",
+       "23              8.2\n",
+       "24              8.7\n",
+       "25              9.0\n",
+       "26              9.5\n",
+       "27              9.6\n",
+       "28             10.3\n",
+       "29             10.5\n",
+       "30             11.2\n",
+       "31             11.5\n",
+       "32             12.3\n",
+       "33             12.9\n",
+       "34             13.5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv('Salary.csv', usecols = ['YearsExperience'])\n",
-    "data['1'] = 1\n",
-    "x = np.array(data).reshape(-1,1)"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ac8f15cb-529e-4b61-a420-de29df208c00",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.1],\n",
+       "       [ 1.3],\n",
+       "       [ 1.5],\n",
+       "       [ 2. ],\n",
+       "       [ 2.2],\n",
+       "       [ 2.9],\n",
+       "       [ 3. ],\n",
+       "       [ 3.2],\n",
+       "       [ 3.2],\n",
+       "       [ 3.7],\n",
+       "       [ 3.9],\n",
+       "       [ 4. ],\n",
+       "       [ 4. ],\n",
+       "       [ 4.1],\n",
+       "       [ 4.5],\n",
+       "       [ 4.9],\n",
+       "       [ 5.1],\n",
+       "       [ 5.3],\n",
+       "       [ 5.9],\n",
+       "       [ 6. ],\n",
+       "       [ 6.8],\n",
+       "       [ 7.1],\n",
+       "       [ 7.9],\n",
+       "       [ 8.2],\n",
+       "       [ 8.7],\n",
+       "       [ 9. ],\n",
+       "       [ 9.5],\n",
+       "       [ 9.6],\n",
+       "       [10.3],\n",
+       "       [10.5],\n",
+       "       [11.2],\n",
+       "       [11.5],\n",
+       "       [12.3],\n",
+       "       [12.9],\n",
+       "       [13.5]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array(data)\n",
+    "x"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d901093c-f502-4938-9e4a-13390128411d",
    "metadata": {},
    "outputs": [
@@ -345,7 +605,7 @@
        "       [139465]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,93 +617,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6f0f8cd8-cec8-4508-bad4-2da1aeda8695",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.1],\n",
-       "       [ 1. ],\n",
-       "       [ 1.3],\n",
-       "       [ 1. ],\n",
-       "       [ 1.5],\n",
-       "       [ 1. ],\n",
-       "       [ 2. ],\n",
-       "       [ 1. ],\n",
-       "       [ 2.2],\n",
-       "       [ 1. ],\n",
-       "       [ 2.9],\n",
-       "       [ 1. ],\n",
-       "       [ 3. ],\n",
-       "       [ 1. ],\n",
-       "       [ 3.2],\n",
-       "       [ 1. ],\n",
-       "       [ 3.2],\n",
-       "       [ 1. ],\n",
-       "       [ 3.7],\n",
-       "       [ 1. ],\n",
-       "       [ 3.9],\n",
-       "       [ 1. ],\n",
-       "       [ 4. ],\n",
-       "       [ 1. ],\n",
-       "       [ 4. ],\n",
-       "       [ 1. ],\n",
-       "       [ 4.1],\n",
-       "       [ 1. ],\n",
-       "       [ 4.5],\n",
-       "       [ 1. ],\n",
-       "       [ 4.9],\n",
-       "       [ 1. ],\n",
-       "       [ 5.1],\n",
-       "       [ 1. ],\n",
-       "       [ 5.3],\n",
-       "       [ 1. ],\n",
-       "       [ 5.9],\n",
-       "       [ 1. ],\n",
-       "       [ 6. ],\n",
-       "       [ 1. ],\n",
-       "       [ 6.8],\n",
-       "       [ 1. ],\n",
-       "       [ 7.1],\n",
-       "       [ 1. ],\n",
-       "       [ 7.9],\n",
-       "       [ 1. ],\n",
-       "       [ 8.2],\n",
-       "       [ 1. ],\n",
-       "       [ 8.7],\n",
-       "       [ 1. ],\n",
-       "       [ 9. ],\n",
-       "       [ 1. ],\n",
-       "       [ 9.5],\n",
-       "       [ 1. ],\n",
-       "       [ 9.6],\n",
-       "       [ 1. ],\n",
-       "       [10.3],\n",
-       "       [ 1. ],\n",
-       "       [10.5],\n",
-       "       [ 1. ],\n",
-       "       [11.2],\n",
-       "       [ 1. ],\n",
-       "       [11.5],\n",
-       "       [ 1. ],\n",
-       "       [12.3],\n",
-       "       [ 1. ],\n",
-       "       [12.9],\n",
-       "       [ 1. ],\n",
-       "       [13.5],\n",
-       "       [ 1. ]])"
+       "35"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "x.size"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "812ca0a1-ca29-4335-98ee-35dba83dd73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3887525.02])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sxy = (sum(x*y)-(sum(x)*sum(y))/x.size)\n",
+    "Sxy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d8df3d66-d8f6-491b-be88-1502a23baf60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([445.20742857])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sxx = (sum(np.square(x)) - np.square(sum(x))/x.size)\n",
+    "Sxx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "824e4f14-d112-4c52-abed-08aac7b06cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8731.94104706])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1 = Sxy / Sxx\n",
+    "b1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "683566c8-7363-46f8-9f93-32803aef8612",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.30857142857143"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d289eb9d-2fdf-4925-81f0-a8e22b31fed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83945.6"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "49b8038f-5b1f-485b-a5cf-bcf4ce7a4445",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([28859.52619453])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b0 = np.average(y) - b1*np.average(x)\n",
+    "b0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0375934c-eeef-4394-b059-bb922a379e88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_predicted = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "15915bce-8076-41a9-887b-1ad9e544494b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 39343],\n",
+       "       [ 46205],\n",
+       "       [ 37731],\n",
+       "       [ 43525],\n",
+       "       [ 39891],\n",
+       "       [ 56642],\n",
+       "       [ 60150],\n",
+       "       [ 54445],\n",
+       "       [ 64445],\n",
+       "       [ 57189],\n",
+       "       [ 63218],\n",
+       "       [ 55794],\n",
+       "       [ 56957],\n",
+       "       [ 57081],\n",
+       "       [ 61111],\n",
+       "       [ 67938],\n",
+       "       [ 66029],\n",
+       "       [ 83088],\n",
+       "       [ 81363],\n",
+       "       [ 93940],\n",
+       "       [ 91738],\n",
+       "       [ 98273],\n",
+       "       [101302],\n",
+       "       [113812],\n",
+       "       [109431],\n",
+       "       [105582],\n",
+       "       [116969],\n",
+       "       [112635],\n",
+       "       [122391],\n",
+       "       [121872],\n",
+       "       [127345],\n",
+       "       [126756],\n",
+       "       [128765],\n",
+       "       [135675],\n",
+       "       [139465]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d3b16e47-ba9f-414b-aa9e-973d898ded71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 38464.6613463 ],\n",
+       "       [ 40211.04955571],\n",
+       "       [ 41957.43776513],\n",
+       "       [ 46323.40828866],\n",
+       "       [ 48069.79649807],\n",
+       "       [ 54182.15523101],\n",
+       "       [ 55055.34933572],\n",
+       "       [ 56801.73754513],\n",
+       "       [ 56801.73754513],\n",
+       "       [ 61167.70806866],\n",
+       "       [ 62914.09627808],\n",
+       "       [ 63787.29038278],\n",
+       "       [ 63787.29038278],\n",
+       "       [ 64660.48448749],\n",
+       "       [ 68153.26090631],\n",
+       "       [ 71646.03732514],\n",
+       "       [ 73392.42553455],\n",
+       "       [ 75138.81374396],\n",
+       "       [ 80377.9783722 ],\n",
+       "       [ 81251.17247691],\n",
+       "       [ 88236.72531456],\n",
+       "       [ 90856.30762868],\n",
+       "       [ 97841.86046633],\n",
+       "       [100461.44278044],\n",
+       "       [104827.41330398],\n",
+       "       [107446.99561809],\n",
+       "       [111812.96614163],\n",
+       "       [112686.16024633],\n",
+       "       [118798.51897928],\n",
+       "       [120544.90718869],\n",
+       "       [126657.26592163],\n",
+       "       [129276.84823575],\n",
+       "       [136262.4010734 ],\n",
+       "       [141501.56570164],\n",
+       "       [146740.73032988]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted = b0 + b1*x_predicted\n",
+    "y_predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5850074e-1a74-4355-8b12-a9d9f29ae543",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
